--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,20 +15,9 @@
 	<ul class="nav">
       <li class="nav-title">页面</li>
 	  <li>
-	  	<a class="nav-item" href="/">Articles</a>
+	  	<a class="nav-item" href="/">文章</a>
 	  </li>
-	  {% assign pages_list = site.pages %}
-	  {% for node in pages_list %}
-	    {% if node.title != null %}
-	      {% if node.layout == "page" %}
-	        <li>
-	        	<a class="nav-item" href="{{ node.url }}">
-	            	{{ node.title }}
-	            </a>
-	        </li>
-	      {% endif %}
-	    {% endif %}
-	  {% endfor %}
+	  
 	</ul>
 </div>
 
