--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Roboto", "Nanum Gothic";
+  --font-family-sans-serif: Open Sans, "Nanum Gothic";
   --font-family-serif: "Nanum Myeongjo";
 }
 
