--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ pre {
 }
 
 code {
-	font-family: "Menlo", "Consolas", monospace;
+	font-family:"SF Pro Text", "Menlo", "Consolas", monospace;
 	font-size: 0.8em;
 	margin: 0px;
 }
@@ -113,7 +113,7 @@ code {
 
 .sidebar-brand > a {
 	font-size: 300%;
-	font-family: 'Gelasio';
+	font-family:"SF Pro Text", 'Gelasio';
 	color: #fff;
 }
 
