--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: "SF Pro Text", 'Nanum Myeongjo', serif;
+	font-family: Helvetica, 'Nanum Myeongjo', serif;
 	color: #2c3e50;
 }
 
