--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "SF Pro Text", "Nanum Gothic";
+  --font-family-sans-serif:"Fira Code","SF Pro Text", "Nanum Gothic";
   --font-family-serif: "Nanum Myeongjo";
 }
 
@@ -49,7 +49,7 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: Helvetica, 'Nanum Myeongjo', serif;
+	font-family: "Fira Code",Helvetica, 'Nanum Myeongjo', serif;
 	color: #2c3e50;
 }
 
@@ -73,7 +73,7 @@ pre {
 }
 
 code {
-	font-family:"SF Pro Text", "Menlo", "Consolas", monospace;
+	font-family:"Fira Code","SF Pro Text", "Menlo", "Consolas", monospace;
 	font-size: 0.8em;
 	margin: 0px;
 }
@@ -113,7 +113,7 @@ code {
 
 .sidebar-brand > a {
 	font-size: 300%;
-	font-family:"SF Pro Text", 'Gelasio';
+	font-family:"Fira Code","SF Pro Text", 'Gelasio';
 	color: #fff;
 }
 
@@ -132,7 +132,7 @@ code {
 
 .nav-title {
 	font-size: 100%;
-	font-family: "SF Pro Text","Noto Sans";
+	font-family: "Fira Code","SF Pro Text","Noto Sans";
 	text-transform: uppercase;
 	border-bottom: 1px solid gray;
 	margin-bottom: 5px;
@@ -140,7 +140,7 @@ code {
 
 a.nav-item {
 	font-size: 120%;
-	font-family: "SF Pro Text","Noto Sans";
+	font-family: "Fira Code","SF Pro Text","Noto Sans";
 	text-transform: capitalize;
 	color: #aaa;
 }
@@ -232,7 +232,7 @@ article h3,
 article h4,
 article h5,
 article h6 {
-	font-family: "SF Pro Text","Roboto", "Nanum Gothic";
+	font-family: "Fira Code","SF Pro Text","Roboto", "Nanum Gothic";
 	color: #333;
   	margin-bottom: 0;
 }
@@ -283,14 +283,14 @@ header.home {
 
 footer {
 	padding-top: 15px;
-	font-family: "SF Pro Text",'Ubuntu';
+	font-family: "Fira Code","SF Pro Text",'Ubuntu';
 }
 
 .sidebar-footer {
 	margin-top: 80px;
 	font-size: 0.75em;
 	font-weight: lighter;
-	font-family:"SF Pro Text", "Roboto";
+	font-family:"Fira Code","SF Pro Text", "Roboto";
 	line-height: 1.5;
 }
 
