--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,14 +11,14 @@
 	{%- endif -%}
 </div>
 
-<div class="sidebar-item sidebar-nav">
+<!-- <div class="sidebar-item sidebar-nav">
 	<ul class="nav">
       <li class="nav-title">Pages</li>
 	  <li>
 	  	<a class="nav-item" href="/">Articles</a>
 	  </li>
 	</ul>
-</div>
+</div> -->
 
 <div class="sidebar-item sidebar-nav">
   	<ul class="nav">
