--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,6 @@
 <div class="sidebar-item sidebar-header">
 	<div class='sidebar-brand'>
+		<img src="logo.jpg" alt="">
 		<a href="/">{{ site.title }}</a>
 	</div>
 	<p class="lead">{{ site.description }}</p>
