--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,7 @@
 <div class="sidebar-item sidebar-header">
 	<div class='sidebar-brand'>
-		
+		<img src="logo.png" alt="">
 		<a href="/">{{ site.title }}</a>
-		<img src="logo.jpg" alt="">
 	</div>
 	<p class="lead">{{ site.description }}</p>
 	{%- if social.github -%}
