--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,6 @@
 <div class="sidebar-item sidebar-header">
 	<div class='sidebar-brand'>
-		<img src="logo.png" alt="">
-		<a href="/">{{ site.title }}</a>
+		<a href="/" src="logo.png"</a>
 	</div>
 	<p class="lead">{{ site.description }}</p>
 	{%- if social.github -%}
