--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,11 @@
 <div class="sidebar-item sidebar-header">
 	<div class='sidebar-brand'>
-		<a href="/" src="logo.png"</a>
+		<!-- <img src="logo.png" alt="" >
+		<a href="/" src="logo.png"</a> -->
+		<a href="/">
+			<img src="logo.png" />
+		</a>
+
 	</div>
 	<p class="lead">{{ site.description }}</p>
 	{%- if social.github -%}
