--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
 		<!-- <img src="logo.png" alt="" >
 		<a href="/" src="logo.png"</a> -->
 		<a href="/">
-			<img src="https://www.yuhonglei.cn/logo.png" />
+			<img id="logo" src="https://www.yuhonglei.cn/logo.png" />
 		</a>
 
 	</div>
