--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,7 +236,7 @@ article h3,
 article h4,
 article h5,
 article h6 {
-	font-family: "Fira Code","SF Pro Text","Roboto", "Nanum Gothic";
+	font-family: 华文黑体,"Fira Code","SF Pro Text","Roboto", "Nanum Gothic";
 	color: #333;
   	margin-bottom: 0;
 }
