--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,7 @@
 <article class="post">
   <header class="post-header home">
     <div class="post-title">Articles</div>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
   </header>
 
   <div class="post-content">
